# bs

./: CMakeLists.txt
hausuebung/hu1/: shelltests.sh
hausuebung/hu1/.submitscript/data/: config.json
hausuebung/hu1/bshell/src/: execute.c  f  f1  file.txt  shell  shell.c  statuslist.c  statuslist.d  statuslist.h  test.txt  tokenparser.output
hausuebung/hu2/.submitscript/data/: config.json
